# opsroom

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  collector_request.yml  feature_request.yml
.github/workflows/: ci.yml
.impeccable/: hook.cache.json
docs/launch/: RUNBOOK.md  console-now.png.bak  demo.tape  launch-checklist.md  reddit.md  show-hn.md  x-thread.md
docs/superpowers/specs/: 2026-07-17-multi-agent-collectors-design.md
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
opsroom/: __init__.py  cli.py  config.py  contextpack.py  counsel.py  dashboard.py  db.py  demo.py  dispatch.py  doctor.py  drafts.py  enrich.py  inbox.py  ops.py  promises.py  proposals.py  redact.py  resources.py  runs.py  serve.py  sessions.py  setup.py  state.py  ventures.py  views.py
opsroom/collectors/: __init__.py  aider.py  chat.py  cli.py  codex.py  cursor.py  fs.py  gemini.py  git.py  notes.py  opencode.py
tests/: fake_agent.py  test_accuracy.py  test_aider.py  test_browser_origin.py  test_chat_openai.py  test_codex.py  test_connect_doctor.py  test_counsel.py  test_cursor.py  test_demo.py  test_dispatch.py  test_doctor_fire.py  test_drafts.py  test_features.py  test_gemini.py  test_hardening.py  test_hot_lanes.py  test_inbox.py  test_lead_stage.py  test_leads_page.py  test_migration.py  test_money.py  test_nav.py  test_now_fold.py  test_opencode.py  test_palette.py  test_proposals.py  test_queue.py  test_redaction.py  test_resources.py  test_retry.py  test_reveal.py  test_runs_ledger.py  test_serve.py  test_sessions.py  test_setup_web.py  test_stale_code.py  test_state.py  test_tail_endpoint.py  test_watchdog.py
