[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "opsroom"
version = "0.1.0"
description = "Local-first operator console: fuses your AI coding sessions, git repos, and markdown notes into one dashboard that tells you what to do next."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Malek Adjeb" }]
keywords = ["dashboard", "productivity", "founder", "claude-code", "local-first", "obsidian", "time-tracking"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/malekadjeb-ai/opsroom"
Issues = "https://github.com/malekadjeb-ai/opsroom/issues"

[project.scripts]
opsroom = "opsroom.cli:main"

[tool.setuptools.packages.find]
include = ["opsroom*"]
