[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
# PyPI distribution name (the plain "opsroom" was taken). The import package and the
# CLI command are both still `opsroom` — `pip install opsroom-console` gives you `opsroom`.
name = "opsroom-console"
version = "0.4.1"
description = "Local-first operator console: fuses your AI agent sessions (Claude Code, Codex CLI, ChatGPT), git repos, and markdown notes into one dashboard that tells you what to do next."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Malek Adjeb" }]
keywords = ["dashboard", "productivity", "founder", "claude-code", "codex", "chatgpt", "ai-agents", "local-first", "obsidian", "time-tracking"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/malekadjeb-ai/opsroom"
Issues = "https://github.com/malekadjeb-ai/opsroom/issues"

[project.scripts]
opsroom = "opsroom.cli:main"

[tool.setuptools.packages.find]
include = ["opsroom*"]
